fix(FE / Roundabout): Fix words overflowing and fix layout for portrait

--- a/RiffleFrontend/src/styles/member.css
+++ b/RiffleFrontend/src/styles/member.css
@@ -79,5 +79,19 @@ button.radio-sel {
     flex: 1;
     display: flex;
     flex-direction: column;
-    gap: 0.5rem;
+}
+
+.col button {
+    margin: 2px;
+}
+
+@media (orientation: portrait) {
+    .columns 
+    {
+        flex-direction: column;
+    }
+    .col {
+        margin-bottom: 10px;
+        align-items: center;
+    }
 }
